profile pic squish fix?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,6 +120,7 @@ h1 {
 	font-weight: 900;
 	font-size: 36px;
 	margin-bottom: 0.2em;
+	padding: 0.3vw;
 }
 
 h2 {
